--- a/docs/03.shadowsocks_tiny.conf
+++ b/docs/03.shadowsocks_tiny.conf
@@ -11,7 +11,7 @@ dns-direct-system = true
 icmp-auto-reply = true
 always-reject-url-rewrite = false
 private-ip-answer = true
-dns-direct-fallback-proxy = true
+dns-direct-fallback-proxy = false
 
 # whitelist mode
 [Rule]
