--- a/docs/03.shadowsocks_tiny.conf
+++ b/docs/03.shadowsocks_tiny.conf
@@ -7,7 +7,7 @@ dns-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query, https://1
 ipv6 = true
 prefer-ipv6 = false
 dns-fallback-system = true
-dns-direct-system = true
+dns-direct-system = false
 icmp-auto-reply = true
 always-reject-url-rewrite = false
 private-ip-answer = true
