--- a/docs/03.shadowsocks_tiny.conf
+++ b/docs/03.shadowsocks_tiny.conf
@@ -4,7 +4,7 @@ skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, capt
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
 # use doh as default
 dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query, https://101.6.6.6:8443/dns-query
-ipv6 = true
+ipv6 = false
 prefer-ipv6 = false
 dns-fallback-system = true
 dns-direct-system = false
