--- a/docs/03.shadowsocks_tiny.conf
+++ b/docs/03.shadowsocks_tiny.conf
@@ -7,7 +7,7 @@ dns-server = quic://223.5.5.5, quic://223.6.6.6, https://dns.alidns.com/dns-quer
 ipv6 = false
 prefer-ipv6 = false
 dns-fallback-system = true
-dns-direct-system = false
+dns-direct-system = true
 icmp-auto-reply = true
 always-reject-url-rewrite = false
 private-ip-answer = true
